--- a/src/pages/[...lang]/index.astro
+++ b/src/pages/[...lang]/index.astro
@@ -9,7 +9,7 @@ import OurValue from "@/components/sections/OurValue.astro";
 import CallToAction from "@/components/sections/CallToAction.astro";
 import PricingSection from "@/components/sections/PricingSection.astro";
 import ServicesSection from "@/components/sections/ServicesSection.astro";
-import TestimonialSection from "@/components/sections/TestimonialSection.astro";
+import PortfolioSection from "@/components/sections/PortfolioSection.astro";
 import MeetTheDuo from "@/components/sections/MeetTheDuo.astro";
 
 export function getStaticPaths() {
@@ -30,7 +30,7 @@ const homepage = await getEntryCTM("homepage", "-index", Astro.currentLocale);
   </div>
   <ServicesSection />
   <PricingSection />
-  <TestimonialSection />
+  <PortfolioSection />
   <FaqSection content={homepage.data.faqSection} />
   <CallToAction />
 </Base>
