--- a/src/layouts/components/widgets/ContactModal.astro
+++ b/src/layouts/components/widgets/ContactModal.astro
@@ -48,6 +48,11 @@ const modalHeading = contactPage?.data?.pageHeading || "Let's Work Together";
     color: inherit;
   }
 
+  .contact-modal-panel :global(.container) {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+  }
+
   .contact-modal-panel :global([data-aos][data-aos-delay="200"]) {
     padding-left: 0 !important;
     padding-right: 0 !important;
