fix contact form

--- a/src/layouts/components/sections/ContactSection.astro
+++ b/src/layouts/components/sections/ContactSection.astro
@@ -220,6 +220,7 @@ const validationMessages = {
                           \"searchClasses\": \"form-input hs-dropdown-search-input\",
                           \n\"searchWrapperClasses\": \"hs-search-input-wrapper\",
                           \n\"placeholder\": \"${input.placeholder || "Please set placeholder"}\",
+                          \n\"dropdownAutoPlacement\": true,
                           ${
                             input.dropdown?.multiple
                               ? `\n\"toggleTag\": \"<button type=\\\"button\\\" aria-expanded=\\\"false\\\"><span class=\\\"text-text-default\\\"><\/span><\/button>\",`
